<resources>
    <string name="app_name">Pest Expert 360&#xb0;</string>

    <string name="title_home">Newsfeed</string>
    <string name="title_agend">Agenda</string>
    <string name="title_attendee">Attendee</string>
    <string name="title_speaker">Speaker</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_document">Document</string>
    <string name="title_generalinfo">General Info</string>
    <string name="title_qrbadge">QR Badge</string>
    <string name="news_edit_title">| What\'s on your mind?</string>
    <string name="searchattendee">Type here to search Attendee</string>
    <string name="searchevent">Type here to search Event</string>
    <string name="searchspeaker">Type here to search Speaker</string>
    <string name="pullrefresh">Pull Down to Refresh</string>
    <string name="eventinfo_title">Event Info</string>
    <string name="notification_title">Notiications</string>
    <string name="video_title">Video Gallery</string>
    <string name="imagegallery_title">Image Gallery</string>
    <string name="travel_title">Travel Desk</string>
    <string name="title_livepoll">Live Poll</string>
    <string name="title_quiz">Quiz</string>
    <string name="livepollblank">No active poll</string>
    <string name="quizblank">No active quiz</string>
    <string name="typeMessage">Type here your message...</string>
    <string name="post">Post</string>
    <string name="no_matches_found">No Matches Found</string>
    <string name="cancel">Cancel</string>
    <string name="deletecomment">Delete Comment</string>
    <string name="reportcomment">Report Comment</string>
    <string name="hidecomment">Hide Comment</string>
    <string name="reportuser">Report User</string>
    <string name="rate">Rate</string>
    <string name="reportpost">Report Post</string>
    <string name="hidepost">Hide Post</string>
    <string name="deletepost">Delete Post</string>
    <string name="blockuser">Block User</string>
    <string name="sendmsg">Submit</string>
    <string name="search_event_here">Type here to search event</string>
    <string name="attendeedetail">Attendee details</string>
    <string name="speakerdetail">Speaker Detail</string>
    <string name="quizlistingtitle">Quiz</string>
    <string name="eulatitle">EULA</string>
    <string name="privacypolicytitle">Privacy Policy</string>
    <string name="contactustitle">Contact Us</string>
    <string name="title_survey">Survey</string>

    <string name="maps_api_key">AIzaSyCmc8lu_Yp2dWhpm3TLtGVTcZXJJHjHg5k</string>
    <string name="designandeveloped"><u>Design &amp; Developed by Procialize</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="high_array">
        <item>High</item>
        <item>Low</item>

    </string-array>
    <string-array name="any_array">
        <item>Any</item>
    </string-array>
    <string-array name="clean_array">
    <item>High</item>
    <item>Low</item>
    </string-array>

    <string-array name="amount_array1">
        <item>Square feet</item>

    </string-array>

    <string-array name="amount_array">

        <item>Square meter</item>

    </string-array>
    <string name="enrollleap">Leap of Fortune (LEAP) is a loyalty program from Bayer Environmental Science, to reward and recognize Pest Control Operators (PCOs) &amp; Retailers for using Bayer products.
        \nBenefits of joining LEAP:\n

\n\u25CF  Earn mPoints on product purchases
\n\u25CF  Enjoy benefits of seasonal offers
\n\u25CF  Assistance from technical experts
\n\u25CF  Redeem mPoints &amp; get exciting rewards</string>

    <string
        name="messageWithLink"><a href="https://www.procialize.live/bayer_knight/terms_and_condition.html">I consent to share my personal data as per the Privacy Policy with Bayer CropScience Limited and its affiliates in accordance with the applicable laws.
        I also understand the Privacy Policy and consent to the processing and transfer of personal data in accordance with it.</a></string>
</resources>
