<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/title_livepoll"
        android:textColor="#000000"
        android:textSize="@dimen/textsizenormal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/speakertitle"
            android:layout_marginBottom="5dp">

            <RelativeLayout
                android:id="@+id/layoutTop"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/colorPrimary"></RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutBottom"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_below="@id/layoutTop"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/live_poll_header">

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/layoutBottom"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-40dp"
                android:adjustViewBounds="true">

                <ImageView
                    android:id="@+id/profileIV"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerInParent="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/live_poll_logo" />


            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pullrefresh"
            android:textSize="@dimen/textsizesmaller" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center|center_horizontal"
                android:text="@string/livepollblank"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/livepollrefreash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/livepoll_list"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:divider="@android:color/transparent"
                    android:smoothScrollbar="true" />

            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        </RelativeLayout>
    </LinearLayout>


</LinearLayout>